--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,31 @@
   --medium-gray: #696969;
   --almost-blue: #083aa9;
 }
+.material-icons {
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px; /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: "liga";
+}
+
 * {
   margin: 0;
   box-sizing: border-box;
@@ -28,9 +53,9 @@ body {
 }
 
 .skewed--shadow {
-  -webkit-box-shadow: 0px 2px 0px 0px rgba(255, 255, 255, .4);
-  -moz-box-shadow: 0px 2px 0px 0px rgba(255, 255, 255, .4);
-  box-shadow: 0px 2px 0px 1px rgba(255, 255, 255, .4);
+  -webkit-box-shadow: 0px 2px 0px 0px rgba(255, 255, 255, 0.4);
+  -moz-box-shadow: 0px 2px 0px 0px rgba(255, 255, 255, 0.4);
+  box-shadow: 0px 2px 0px 1px rgba(255, 255, 255, 0.4);
 }
 
 /* Nav */
@@ -136,53 +161,104 @@ body {
 
 /* Main */
 
-.main__grid {
+.main__banner {
   background: url(../img/Banner-section.jpg);
   background-size: cover;
   overflow: hidden;
 
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-areas: "text";
-
-  margin: 15px 0;
+  margin: 15px 0 0 0;
   padding: 10px 25px;
-
-  border-radius: 3px;
-  -webkit-box-shadow: 0px 5px 6px 0px rgba(0, 0, 0, 0.49);
-  -moz-box-shadow: 0px 5px 6px 0px rgba(0, 0, 0, 0.49);
-  box-shadow: 0px 5px 6px 0px rgba(0, 0, 0, 0.49);
 }
 
 .main__article {
   padding: 56px 0;
   text-align: center;
-  grid-area: text;
 }
 
 .main__title {
-  font-size: 2rem;
+  margin-top: 10px;
+
+  font-size: 1.8rem;
   color: var(--almost-white);
 }
 
 .main__paragraph {
   line-height: 1.5;
-  margin: 1.5em 0;
-  color: rgba(255, 255, 255, 0.685);
+  margin: 1.3em 0;
+  color: rgba(255, 255, 255, 0.7);
 }
 
 .main__cta {
   background-color: var(--almost-blue);
   color: #fff;
   display: inline-block;
-  padding: 0.8em 1.5em;
+  font-size: 1.2em;
+  margin: 20px 0;
+  padding: 0.8em 1.3em;
   border-radius: 10px;
   text-decoration: none;
+  text-align: center;
   font-weight: 700;
 }
 
-.main__cta:hover{
+.main__cta--icon {
+  vertical-align: sub;
+  margin-right: 5px;
+}
+
+.main__cta:hover {
   box-shadow: 0px 0px 8px 0px rgba(255, 255, 255, 0.49);
+}
+
+.main__quality--grid {
+  margin-top: 10px;
+
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 0.2fr 1fr 0.2fr;
+  grid-template-areas: 
+  ". title ."
+  ". first ."
+  ". second ."
+  ". third .";
+  justify-items: center;
+}
+
+.main__quality--grid h2 {
+  grid-area: title;
+
+  font-size: 180%;
+  word-spacing: 2px;
+  font-style: bold;
+  letter-spacing: 1px;
+  color: #4c79ad;
+  text-transform: uppercase;
+  text-align: center;
+}
+.main__quality--grid h2:after {
+  display: block;
+  height: 2px;
+  background-color: #4c79ad;
+  content: "";
+  width: 100px;
+  margin: 0 auto;
+  margin-top: 15px;
+}
+
+.main__quality--items{
+  margin-top: 10px;
+}
+
+.first{
+  grid-area: first;
+}
+
+.second{
+  grid-area: second;
+}
+
+.third{
+  grid-area: third;
 }
 
 /* Tablet */
