--- a/css/style.css
+++ b/css/style.css
@@ -334,12 +334,6 @@ body {
   list-style: none;
 }
 
-.footer-nav h4 {
-  color: #fafafa;
-  font-size: 1em;
-  margin-bottom: 10px;
-}
-
 .footer-nav li {
   margin: 5px 0;
 
@@ -355,8 +349,18 @@ body {
   color: #696969;
 }
 
-.footer-contact h4 {
+.footer__row--items h4 {
   color: #f3f3f3;
+  font-size: 1em;
+  margin-bottom: 7px;
+}
+
+.footer__row--items p {
+  color: #f3f3f3;
+
+  text-align: center;
+  margin-top: 3px;
+  font-size: 0.9em;
 }
 
 .footer-contact a {
@@ -364,17 +368,33 @@ body {
   color: #f3f3f3;
 }
 
-.footer-contact p {
-  color: #f3f3f3;
-
-  text-align: center;
+.footer-contact a:hover {
+  color: #696969;
 }
 
 .footer__row--icon {
   vertical-align: sub;
   margin-right: 2px;
 
-  font-size: 22px !important;
+  font-size: 20px !important;
+}
+
+hr {
+  border: 1px solid #bebebe;
+  width: 80%;
+
+  margin: 15px auto;
+}
+
+.footer__social--icon {
+  margin: 0 5px;
+
+  filter: invert(100%);
+}
+
+.footer p{
+  color: #f3f3f3;
+  margin-top: 10px;
 }
 
 /* Tablet */
