--- a/css/style.css
+++ b/css/style.css
@@ -680,46 +680,138 @@ hr {
     color: var(--almost-white);
   }
 
-  .main__grid {
-    margin: 0 auto;
-    max-width: 1200px;
-    width: 90%;
-
-    gap: 2em;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: "text img";
-
-    padding: 30px 0 15px 0;
-  }
-
-  .main__picture {
-    max-height: 500px;
-  }
-
-  .main__img {
-    height: 100%;
-  }
-
-  .main__article {
-    text-align: left;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .main__brands {
-    margin: auto 0 0 0;
-  }
-
-  .main__texts {
-    margin: auto 0;
-  }
-
   .main__title {
-    font-size: 3.5rem;
+    font-size: 3.5em;
   }
 
   .main__paragraph {
-    margin: 2em 0;
+    font-size: 1.3em;
+  }
+
+  .main__cta {
+    font-size: 1.5em;
+  }
+
+  .main__cta-icon {
+    font-size: 27px !important;
+  }
+
+  .carousel__services {
+    width: 90%;
+    height: 500px;
+    margin: 0 auto;
+    background: white;
+
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+    grid-template-areas: "card";
+    padding: 10px;
+  }
+
+  .carousel__title {
+    display: none;
+  }
+
+  .carousel__services-card {
+    height: 480px;
+
+    box-shadow: none;
+
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: "img info";
+
+    background: none;
+  }
+
+  .carousel__services-card--show {
+    opacity: 1;
+    pointer-events: unset;
+    grid-area: card;
+  }
+
+  .card-img {
+    grid-area: img;
+    width: 100%;
+    height: 100%;
+    background: none;
+  }
+
+  .card-info {
+    grid-area: info;
+    margin: 0;
+    width: 100%;
+    align-self: center;
+  }
+
+  .card-info h3 {
+    font-size: 3em;
+  }
+
+  .card-info p {
+    font-size: 1.5em;
+  }
+
+  .main__quality-grid {
+    width: 90%;
+    margin: 0 auto;
+    padding: 10px;
+
+    grid-template-rows: 1fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 2px;
+
+    grid-template-areas:
+      "title title title"
+      "first second third";
+    justify-items: center;
+  }
+
+  .main__quality-items {
+    place-self: center;
+    padding: 0;
+    margin: 0;
+
+    font-size: 1.3em;
+  }
+
+  .main__about {
+    padding: 10px;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+  }
+
+  .main__about-items {
+    width: 80%;
+    height: 300px;
+
+    font-size: 1.2em;
+  }
+
+  .footer__row {
+    width: 90%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: "about contact";
+    grid-column-gap: 10px;
+    justify-items: center;
+  }
+
+  .footer {
+    font-size: 1.2em;
+  }
+
+  .footer-about {
+    grid-area: about;
+    place-self: center;
+  }
+
+  .footer__row-items-contact {
+    grid-area: contact;
   }
 }
